        - Fl::Dial - Circular dial to control a single floating point value
        - Fl::FillDial - Fl::Dial with a filled arc
        - Fl::LineDial - Fl::Dial with a single line to mark the current value
        - Fl::Roller - '3D' dial to control a floating point value
        - Fl::ValueOutput - Read-only display of floating point value

0.99.7 2016-05-18T00:20:32Z

    - Fix refcount related crash on super sensitive *nix glibc

0.99.6 2016-05-17T16:16:32Z

    - New widgets:
        - Fl::Input - single line text input widget
        - Fl::SecretInput - input widget with hidden text (password fields, etc.)
        - Fl::FloatInput - limits users to type only floating point numbers
        - Fl::IntInput - limits users to type only decimal digits and hex values
        - Fl::MultilineInput - allows editing of multiline text fields
        - Fl::Valuator - Base class for several floating-point value widget types
        - Fl::Adjuster - Dynamic range valuator stolen from Prisms

0.99.5 2016-05-08T22:04:46Z

    - Starting basic documentation in Fl.pm
    - Callbacks no longer cause crash on destruction due to bad ref counts
    - New widgets:
        - Fl::CheckButton - a button with a checkbox
        - Fl::LightButton - a button with a light to indicate 'on' vs 'off'
        - Fl::ReturnButton - triggers callback when Enter key is pressed
        - Fl::RepeatButton - repeatedly triggers callback as long as it's held down
        - Fl::RadioRoundButton - looks like a radio button and acts like one too
        - Fl::RoundButton - looks like a radio button but behaves like a traditional button
        - Fl::RadioButton - acts like a radio button but looks like a regular one
        - Fl::RadioLightButton - no idea...
        - Fl::ToggleButton - toggles on when pressed and back off when pressed again
    - New export tags/values (get them all with :enum, of course):
        - :align - Label alignment values

0.99.4 2016-05-06T02:02:22Z
