@@ -60,5 +60,6 @@ typedef CTX* Fl__FillDial;
 typedef CTX* Fl__LineDial;
 typedef CTX* Fl__Roller;
 typedef CTX* Fl__ValueOutput;
+typedef CTX* Fl__ValueInput;
 
 #endif // #ifndef fltk_pm_h
